Add core java and collection interview QnA